Сделал модалку обратного звонка, страницу Категории продукции, начал Каталог

--- a/parts/services.html
+++ b/parts/services.html
@@ -2,12 +2,18 @@
     <span class="service-block__top">
         <img src="./static/images/service1.svg" alt="" class="service-block__icon">
     </span>
+    <span class="service-block__overlay">
+        <img src="./static/images/service-pic1.jpg" alt="" class="service-block__img">
+    </span>
     <span class="service-block__title">Лазерная резка ЧПУ</span>
     <img src="./static/images/service1.svg" alt="" class="service-block__bg">
 </a>
 <a href="/" class="service-block">
     <span class="service-block__top">
         <img src="./static/images/service2.svg" alt="" class="service-block__icon">
+    </span>
+    <span class="service-block__overlay">
+        <img src="./static/images/service-pic2.jpg" alt="" class="service-block__img">
     </span>
     <span class="service-block__title">Сварочные работы</span>
     <img src="./static/images/service2.svg" alt="" class="service-block__bg">
@@ -16,12 +22,18 @@
     <span class="service-block__top">
         <img src="./static/images/service3.svg" alt="" class="service-block__icon">
     </span>
+    <span class="service-block__overlay">
+        <img src="./static/images/service-pic3.jpg" alt="" class="service-block__img">
+    </span>
     <span class="service-block__title">Лазерная сварка</span>
     <img src="./static/images/service3.svg" alt="" class="service-block__bg">
 </a>
 <a href="/" class="service-block">
     <span class="service-block__top">
         <img src="./static/images/service4.svg" alt="" class="service-block__icon">
+    </span>
+    <span class="service-block__overlay">
+        <img src="./static/images/service-pic4.jpg" alt="" class="service-block__img">
     </span>
     <span class="service-block__title">Гибка листового металла ЧПУ</span>
     <img src="./static/images/service4.svg" alt="" class="service-block__bg">
@@ -30,12 +42,18 @@
     <span class="service-block__top">
         <img src="./static/images/service5.svg" alt="" class="service-block__icon">
     </span>
+    <span class="service-block__overlay">
+        <img src="./static/images/service-pic5.jpg" alt="" class="service-block__img">
+    </span>
     <span class="service-block__title">Токарно-фрезерные работы</span>
     <img src="./static/images/service5.svg" alt="" class="service-block__bg">
 </a>
 <a href="/" class="service-block">
     <span class="service-block__top">
         <img src="./static/images/service6.svg" alt="" class="service-block__icon">
+    </span>
+    <span class="service-block__overlay">
+        <img src="./static/images/service-pic6.jpg" alt="" class="service-block__img">
     </span>
     <span class="service-block__title">Линия порошковой покраски</span>
     <img src="./static/images/service6.svg" alt="" class="service-block__bg">
