--- a/src/html/catalog.html
+++ b/src/html/catalog.html
@@ -1,11 +1,115 @@
 @include ./parts/header.html
-<div class="page">
+<div class="catalog-page page">
+    <div class="page__bg bg">
+        <div class="page__stain page__stain--1 stain">
+            <svg class="stain__icon" viewBox="0 0 866 885">
+                <path>
+            </svg>
+        </div>
+        <div class="page__stain page__stain--2 stain">
+            <svg class="stain__icon" viewBox="0 0 866 885">
+                <path>
+            </svg>
+        </div>
+    </div>
     <div class="container">
         @include ./parts/breadcrumbs.html
     </div>
     <div class="page__content">
         <div class="container">
             <h1 class="contacts__title page-title">Категории продукции</h1>
+            <div class="categories-grid">
+                <div class="category-block">
+                    <div class="category-block__bg bg">
+                        <img src="./static/images/service-pic.jpg" alt="" class="bg__img">
+                    </div>
+                    <a href="catalog-category.html" class="category-block__top">
+                        <span class="category-block__name">Шкафы металлические</span>
+                        <svg class="category-block__arr" viewBox="0 0 9 5">
+                            <use href='./static/images/sprite.svg#arr'/>
+                        </svg>
+                    </a>
+                    <div class="category-block__dropdown">
+                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
+                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
+                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
+                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
+                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
+                    </div>
+                </div>
+                <div class="category-block">
+                    <div class="category-block__bg bg">
+                        <img src="./static/images/service-pic.jpg" alt="" class="bg__img">
+                    </div>
+                    <a href="catalog-category.html" class="category-block__top">
+                        <span class="category-block__name">Шкафы металлические</span>
+                        <svg class="category-block__arr" viewBox="0 0 9 5">
+                            <use href='./static/images/sprite.svg#arr'/>
+                        </svg>
+                    </a>
+                    <div class="category-block__dropdown">
+                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
+                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
+                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
+                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
+                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
+                    </div>
+                </div>
+                <div class="category-block">
+                    <div class="category-block__bg bg">
+                        <img src="./static/images/service-pic.jpg" alt="" class="bg__img">
+                    </div>
+                    <a href="catalog-category.html" class="category-block__top">
+                        <span class="category-block__name">Шкафы металлические</span>
+                        <svg class="category-block__arr" viewBox="0 0 9 5">
+                            <use href='./static/images/sprite.svg#arr'/>
+                        </svg>
+                    </a>
+                    <div class="category-block__dropdown">
+                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
+                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
+                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
+                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
+                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
+                    </div>
+                </div>
+                <div class="category-block">
+                    <div class="category-block__bg bg">
+                        <img src="./static/images/service-pic.jpg" alt="" class="bg__img">
+                    </div>
+                    <a href="catalog-category.html" class="category-block__top">
+                        <span class="category-block__name">Шкафы металлические</span>
+                        <svg class="category-block__arr" viewBox="0 0 9 5">
+                            <use href='./static/images/sprite.svg#arr'/>
+                        </svg>
+                    </a>
+                    <div class="category-block__dropdown">
+                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
+                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
+                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
+                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
+                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
+                    </div>
+                </div>
+                <div class="category-block">
+                    <div class="category-block__bg bg">
+                        <img src="./static/images/service-pic.jpg" alt="" class="bg__img">
+                    </div>
+                    <a href="catalog-category.html" class="category-block__top">
+                        <span class="category-block__name">Шкафы металлические</span>
+                        <svg class="category-block__arr" viewBox="0 0 9 5">
+                            <use href='./static/images/sprite.svg#arr'/>
+                        </svg>
+                    </a>
+                    <div class="category-block__dropdown">
+                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
+                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
+                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
+                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
+                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
