--- a/src/html/parts/header.html
+++ b/src/html/parts/header.html
@@ -24,7 +24,7 @@
                 <a href="tel: 8 (8172) 581-321" class="header__tel">8 (8172) 581-321</a>
                 <a href="tel: +7 921 233-60-55" class="header__tel">+7 921 233-60-55</a>
             </div>
-            <div class="header__btn btn btn--transparent">Заказать звонок</div>
+            <div class="header__btn btn btn--transparent" data-micromodal-trigger="modal-callback">Заказать звонок</div>
             <div class="header__actions">
                 <div class="header-burger default-burger burger" id="header-burger">
                     <div class="default-burger__line burger__line"></div>
