--- a/catalog-category.html
+++ b/catalog-category.html
@@ -89,19 +89,21 @@
     </header>
     <main>
 <!-- end header.html-->
-<div class="catalog-page page">
-    <div class="page__bg bg">
-        <div class="page__stain page__stain--1 stain">
-            <svg class="stain__icon" viewBox="0 0 866 885">
-                <path>
-            </svg>
-        </div>
-        <div class="page__stain page__stain--2 stain">
-            <svg class="stain__icon" viewBox="0 0 866 885">
-                <path>
-            </svg>
-        </div>
+<div class="page">
+<!-- start page-bg.html-->
+<div class="page__bg bg">
+    <div class="page__stain page__stain--1 stain">
+        <svg class="stain__icon" viewBox="0 0 866 885">
+            <path>
+        </svg>
     </div>
+    <div class="page__stain page__stain--2 stain">
+        <svg class="stain__icon" viewBox="0 0 866 885">
+            <path>
+        </svg>
+    </div>
+</div>
+<!-- end page-bg.html-->
     <div class="container">
 <!-- start breadcrumbs.html-->
 <ul class="breadcrumbs">
@@ -124,97 +126,35 @@
     </div>
     <div class="page__content">
         <div class="container">
-            <h1 class="contacts__title page-title">Категории продукции</h1>
-            <div class="categories-grid">
-                <div class="category-block">
-                    <div class="category-block__bg bg">
-                        <img src="./static/images/service-pic.jpg" alt="" class="bg__img">
-                    </div>
-                    <a href="catalog-category.html" class="category-block__top">
-                        <span class="category-block__name">Шкафы металлические</span>
-                        <svg class="category-block__arr" viewBox="0 0 9 5">
-                            <use href='./static/images/sprite.svg#arr'/>
-                        </svg>
-                    </a>
-                    <div class="category-block__dropdown">
-                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
-                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
-                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
-                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
-                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
-                    </div>
+            <h1 class="catalog-category__title page-title">Каталог</h1>
+            <div class="catalog-search-wrap">
+                <div class="form-elem catalog-search">
+                    <input name="search" type="text" class="form-text-input" placeholder="Поиск">
+                    <p class="form-input-placeholder">Поиск</p>
+                    <svg viewBox="0 0 22 22">
+                        <use href='./static/images/sprite.svg#search'/>
+                    </svg>
                 </div>
-                <div class="category-block">
-                    <div class="category-block__bg bg">
-                        <img src="./static/images/service-pic.jpg" alt="" class="bg__img">
-                    </div>
-                    <a href="catalog-category.html" class="category-block__top">
-                        <span class="category-block__name">Шкафы металлические</span>
-                        <svg class="category-block__arr" viewBox="0 0 9 5">
-                            <use href='./static/images/sprite.svg#arr'/>
-                        </svg>
-                    </a>
-                    <div class="category-block__dropdown">
-                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
-                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
-                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
-                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
-                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
-                    </div>
+            </div>
+            <div class="category-filter">
+                <a href="/" class="active">Шкафы бухгалтерские</a>
+                <a href="/" class="">Шкафы бухгалтерские</a>
+                <a href="/" class="">Шкафы для одежды</a>
+                <a href="/" class="">Шкафы картотечные</a>
+                <a href="/" class="">Шкафы медицинские</a>
+                <a href="/" class="">Шкафы пожарные</a>
+                <a href="/" class="">Шкафы картотечные</a>
+                <a href="/" class="">Прочее</a>
+            </div>
+            <div class="products-filter">
+                <div class="products-filter__head opened" data-collapse-target="#filters">
+                    Фильтр
+                    <svg viewBox="0 0 9 5">
+                        <use href='./static/images/sprite.svg#arr'/>
+                    </svg>
                 </div>
-                <div class="category-block">
-                    <div class="category-block__bg bg">
-                        <img src="./static/images/service-pic.jpg" alt="" class="bg__img">
-                    </div>
-                    <a href="catalog-category.html" class="category-block__top">
-                        <span class="category-block__name">Шкафы металлические</span>
-                        <svg class="category-block__arr" viewBox="0 0 9 5">
-                            <use href='./static/images/sprite.svg#arr'/>
-                        </svg>
-                    </a>
-                    <div class="category-block__dropdown">
-                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
-                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
-                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
-                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
-                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
-                    </div>
-                </div>
-                <div class="category-block">
-                    <div class="category-block__bg bg">
-                        <img src="./static/images/service-pic.jpg" alt="" class="bg__img">
-                    </div>
-                    <a href="catalog-category.html" class="category-block__top">
-                        <span class="category-block__name">Шкафы металлические</span>
-                        <svg class="category-block__arr" viewBox="0 0 9 5">
-                            <use href='./static/images/sprite.svg#arr'/>
-                        </svg>
-                    </a>
-                    <div class="category-block__dropdown">
-                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
-                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
-                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
-                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
-                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
-                    </div>
-                </div>
-                <div class="category-block">
-                    <div class="category-block__bg bg">
-                        <img src="./static/images/service-pic.jpg" alt="" class="bg__img">
-                    </div>
-                    <a href="catalog-category.html" class="category-block__top">
-                        <span class="category-block__name">Шкафы металлические</span>
-                        <svg class="category-block__arr" viewBox="0 0 9 5">
-                            <use href='./static/images/sprite.svg#arr'/>
-                        </svg>
-                    </a>
-                    <div class="category-block__dropdown">
-                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
-                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
-                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
-                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
-                        <a href="/" class="category-block__link">Шкафы бухгалтерские</a>
-                    </div>
+                <div class="products-filter__bottom collapse" id="filters">
+                    <div class="products-filter__filters"></div>
                 </div>
             </div>
         </div>
