--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 <!-- start header-menu.html-->
 <ul class="header__menu">
     <li class="menu-item">
-        <a href="/catalog.html" class="menu-link">Каталог</a>
+        <a href="catalog.html" class="menu-link">Каталог</a>
     </li>
     <li class="menu-item has-children">
-        <a href="/services.html" class="menu-link">
+        <a href="services.html" class="menu-link">
             Услуги
             <svg viewBox="0 0 9 5">
                 <use href='./static/images/sprite.svg#arr'/>
@@ -58,7 +58,7 @@
         </ul>
     </li>
     <li class="menu-item">
-        <a href="/contacts.html" class="menu-link">Контакты</a>
+        <a href="contacts.html" class="menu-link">Контакты</a>
     </li>
 </ul>
 <!-- end header-menu.html-->
@@ -66,7 +66,7 @@
                 <a href="tel: 8 (8172) 581-321" class="header__tel">8 (8172) 581-321</a>
                 <a href="tel: +7 921 233-60-55" class="header__tel">+7 921 233-60-55</a>
             </div>
-            <div class="header__btn btn btn--transparent">Заказать звонок</div>
+            <div class="header__btn btn btn--transparent" data-micromodal-trigger="modal-callback">Заказать звонок</div>
             <div class="header__actions">
                 <div class="header-burger default-burger burger" id="header-burger">
                     <div class="default-burger__line burger__line"></div>
@@ -112,12 +112,18 @@
     <span class="service-block__top">
         <img src="./static/images/service1.svg" alt="" class="service-block__icon">
     </span>
+    <span class="service-block__overlay">
+        <img src="./static/images/service-pic1.jpg" alt="" class="service-block__img">
+    </span>
     <span class="service-block__title">Лазерная резка ЧПУ</span>
     <img src="./static/images/service1.svg" alt="" class="service-block__bg">
 </a>
 <a href="/" class="service-block">
     <span class="service-block__top">
         <img src="./static/images/service2.svg" alt="" class="service-block__icon">
+    </span>
+    <span class="service-block__overlay">
+        <img src="./static/images/service-pic2.jpg" alt="" class="service-block__img">
     </span>
     <span class="service-block__title">Сварочные работы</span>
     <img src="./static/images/service2.svg" alt="" class="service-block__bg">
@@ -126,12 +132,18 @@
     <span class="service-block__top">
         <img src="./static/images/service3.svg" alt="" class="service-block__icon">
     </span>
+    <span class="service-block__overlay">
+        <img src="./static/images/service-pic3.jpg" alt="" class="service-block__img">
+    </span>
     <span class="service-block__title">Лазерная сварка</span>
     <img src="./static/images/service3.svg" alt="" class="service-block__bg">
 </a>
 <a href="/" class="service-block">
     <span class="service-block__top">
         <img src="./static/images/service4.svg" alt="" class="service-block__icon">
+    </span>
+    <span class="service-block__overlay">
+        <img src="./static/images/service-pic4.jpg" alt="" class="service-block__img">
     </span>
     <span class="service-block__title">Гибка листового металла ЧПУ</span>
     <img src="./static/images/service4.svg" alt="" class="service-block__bg">
@@ -140,12 +152,18 @@
     <span class="service-block__top">
         <img src="./static/images/service5.svg" alt="" class="service-block__icon">
     </span>
+    <span class="service-block__overlay">
+        <img src="./static/images/service-pic5.jpg" alt="" class="service-block__img">
+    </span>
     <span class="service-block__title">Токарно-фрезерные работы</span>
     <img src="./static/images/service5.svg" alt="" class="service-block__bg">
 </a>
 <a href="/" class="service-block">
     <span class="service-block__top">
         <img src="./static/images/service6.svg" alt="" class="service-block__icon">
+    </span>
+    <span class="service-block__overlay">
+        <img src="./static/images/service-pic6.jpg" alt="" class="service-block__img">
     </span>
     <span class="service-block__title">Линия порошковой покраски</span>
     <img src="./static/images/service6.svg" alt="" class="service-block__bg">
@@ -536,10 +554,10 @@
 <!-- start header-menu.html-->
 <ul class="header__menu">
     <li class="menu-item">
-        <a href="/catalog.html" class="menu-link">Каталог</a>
+        <a href="catalog.html" class="menu-link">Каталог</a>
     </li>
     <li class="menu-item has-children">
-        <a href="/services.html" class="menu-link">
+        <a href="services.html" class="menu-link">
             Услуги
             <svg viewBox="0 0 9 5">
                 <use href='./static/images/sprite.svg#arr'/>
@@ -571,13 +589,51 @@
         </ul>
     </li>
     <li class="menu-item">
-        <a href="/contacts.html" class="menu-link">Контакты</a>
+        <a href="contacts.html" class="menu-link">Контакты</a>
     </li>
 </ul>
 <!-- end header-menu.html-->
         <div class="mobile-menu__footer">
+            <div class="mobile-menu__btn btn btn--main" data-micromodal-trigger="modal-callback">Заказать звонок</div>
             <a href="tel: 8 (8172) 581-321" class="header__tel">8 (8172) 581-321</a>
             <a href="tel: +7 921 233-60-55" class="header__tel">+7 921 233-60-55</a>
+        </div>
+    </div>
+</div>
+<div class="modal modal--default-animation" id="modal-callback" data-micromodal-close="">
+    <div class="modal-order__overlay modal__overlay">
+        <div class="modal__container modal__default-container">
+            <div class="modal__close" data-micromodal-close>
+                <svg viewBox="0 0 17 17">
+                    <use href='./static/images/sprite.svg#close'/>
+                </svg>
+            </div>
+            <p class="section-title calc-form__title">Рассчитать стоимость проекта</p>
+            <p class="calc-form__text">Оставьте заявку на сайте, наши менеджеры свяжутся с вами, ответят на возникшие вопросы и помогут рассчитать стоимость изготовления необходимого оборудования</p>
+            <form class="calc-form__form" data-feedback-form>
+                <div class="form-elem">
+                    <input type="text" class="form-text-input" placeholder="Имя">
+                    <p class="form-input-placeholder">Имя</p>
+                </div>
+                <div class="form-elem">
+                    <input type="tel" class="form-text-input" placeholder="Телефон">
+                    <p class="form-input-placeholder">Телефон</p>
+                </div>
+                <div class="calc-form__form-row">
+                    <div class="form-elem">
+                        <input type="text" class="form-text-input" placeholder="Ваш вопрос">
+                        <p class="form-input-placeholder">Ваш вопрос</p>
+                    </div>
+                </div>
+                <div class="calc-form__submit-row">
+                    <button data-submit-btn type="submit" class="calc-form__submit btn btn--main btn--pad60">
+                        Отправить заявку
+                    </button>
+                    <p class="personal calc-form__personal">
+                        Нажимая кнопку, вы соглашаетесь <a href="/" class="personal__link">на&nbsp;обработку персональных данных</a>
+                    </p>
+                </div>
+            </form>
         </div>
     </div>
 </div>
