--- a/parts/header.html
+++ b/parts/header.html
@@ -22,10 +22,10 @@
 <!-- start header-menu.html-->
 <ul class="header__menu">
     <li class="menu-item">
-        <a href="/catalog.html" class="menu-link">Каталог</a>
+        <a href="catalog.html" class="menu-link">Каталог</a>
     </li>
     <li class="menu-item has-children">
-        <a href="/services.html" class="menu-link">
+        <a href="services.html" class="menu-link">
             Услуги
             <svg viewBox="0 0 9 5">
                 <use href='./static/images/sprite.svg#arr'/>
@@ -57,7 +57,7 @@
         </ul>
     </li>
     <li class="menu-item">
-        <a href="/contacts.html" class="menu-link">Контакты</a>
+        <a href="contacts.html" class="menu-link">Контакты</a>
     </li>
 </ul>
 <!-- end header-menu.html-->
@@ -65,7 +65,7 @@
                 <a href="tel: 8 (8172) 581-321" class="header__tel">8 (8172) 581-321</a>
                 <a href="tel: +7 921 233-60-55" class="header__tel">+7 921 233-60-55</a>
             </div>
-            <div class="header__btn btn btn--transparent">Заказать звонок</div>
+            <div class="header__btn btn btn--transparent" data-micromodal-trigger="modal-callback">Заказать звонок</div>
             <div class="header__actions">
                 <div class="header-burger default-burger burger" id="header-burger">
                     <div class="default-burger__line burger__line"></div>
