--- a/src/html/contacts.html
+++ b/src/html/contacts.html
@@ -1,14 +1,16 @@
 @include ./parts/header.html
 <div class="page">
-    <div class="page__stain page__stain--1 stain">
-        <svg class="stain__icon" viewBox="0 0 866 885">
-            <path>
-        </svg>
-    </div>
-    <div class="page__stain page__stain--2 stain">
-        <svg class="stain__icon" viewBox="0 0 866 885">
-            <path>
-        </svg>
+    <div class="page__bg bg">
+        <div class="page__stain page__stain--1 stain">
+            <svg class="stain__icon" viewBox="0 0 866 885">
+                <path>
+            </svg>
+        </div>
+        <div class="page__stain page__stain--2 stain">
+            <svg class="stain__icon" viewBox="0 0 866 885">
+                <path>
+            </svg>
+        </div>
     </div>
     <div class="container">
         @include ./parts/breadcrumbs.html
