--- a/src/html/parts/footer.html
+++ b/src/html/parts/footer.html
@@ -15,8 +15,46 @@
     <div class="mobile-menu__wrap">
         @include ./header-menu.html
         <div class="mobile-menu__footer">
+            <div class="mobile-menu__btn btn btn--main" data-micromodal-trigger="modal-callback">Заказать звонок</div>
             <a href="tel: 8 (8172) 581-321" class="header__tel">8 (8172) 581-321</a>
             <a href="tel: +7 921 233-60-55" class="header__tel">+7 921 233-60-55</a>
+        </div>
+    </div>
+</div>
+<div class="modal modal--default-animation" id="modal-callback" data-micromodal-close="">
+    <div class="modal-order__overlay modal__overlay">
+        <div class="modal__container modal__default-container">
+            <div class="modal__close" data-micromodal-close>
+                <svg viewBox="0 0 17 17">
+                    <use href='./static/images/sprite.svg#close'/>
+                </svg>
+            </div>
+            <p class="section-title calc-form__title">Рассчитать стоимость проекта</p>
+            <p class="calc-form__text">Оставьте заявку на сайте, наши менеджеры свяжутся с вами, ответят на возникшие вопросы и помогут рассчитать стоимость изготовления необходимого оборудования</p>
+            <form class="calc-form__form" data-feedback-form>
+                <div class="form-elem">
+                    <input type="text" class="form-text-input" placeholder="Имя">
+                    <p class="form-input-placeholder">Имя</p>
+                </div>
+                <div class="form-elem">
+                    <input type="tel" class="form-text-input" placeholder="Телефон">
+                    <p class="form-input-placeholder">Телефон</p>
+                </div>
+                <div class="calc-form__form-row">
+                    <div class="form-elem">
+                        <input type="text" class="form-text-input" placeholder="Ваш вопрос">
+                        <p class="form-input-placeholder">Ваш вопрос</p>
+                    </div>
+                </div>
+                <div class="calc-form__submit-row">
+                    <button data-submit-btn type="submit" class="calc-form__submit btn btn--main btn--pad60">
+                        Отправить заявку
+                    </button>
+                    <p class="personal calc-form__personal">
+                        Нажимая кнопку, вы соглашаетесь <a href="/" class="personal__link">на&nbsp;обработку персональных данных</a>
+                    </p>
+                </div>
+            </form>
         </div>
     </div>
 </div>
