Делал фильтры в каталоге

--- a/services.html
+++ b/services.html
@@ -90,6 +90,20 @@
     <main>
 <!-- end header.html-->
 <div class="page">
+<!-- start page-bg.html-->
+<div class="page__bg bg">
+    <div class="page__stain page__stain--1 stain">
+        <svg class="stain__icon" viewBox="0 0 866 885">
+            <path>
+        </svg>
+    </div>
+    <div class="page__stain page__stain--2 stain">
+        <svg class="stain__icon" viewBox="0 0 866 885">
+            <path>
+        </svg>
+    </div>
+</div>
+<!-- end page-bg.html-->
     <div class="container">
 <!-- start breadcrumbs.html-->
 <ul class="breadcrumbs">
