--- a/src/html/services.html
+++ b/src/html/services.html
@@ -1,5 +1,6 @@
 @include ./parts/header.html
 <div class="page">
+    @include ./parts/page-bg.html
     <div class="container">
         @include ./parts/breadcrumbs.html
     </div>
