--- a/src/html/catalog-category.html
+++ b/src/html/catalog-category.html
@@ -26,24 +26,26 @@
                 <a href="/" class="">Шкафы картотечные</a>
                 <a href="/" class="">Прочее</a>
             </div>
-            <div class="products-filter" id="filters">
-                <div class="products-filter__head opened" data-collapse-target="#filters-bottom">
+            <div class="products-filter">
+                <div class="products-filter__head opened" data-collapse-target="#filters">
                     Фильтр
                     <svg viewBox="0 0 9 5">
                         <use href='./static/images/sprite.svg#arr'/>
                     </svg>
                 </div>
-                <div class="products-filter__bottom collapse" id="filters-bottom">
+                <form action="" class="products-filter__bottom collapse" id="filters">
+                    <input type="text" class="hidden" id="order-by" name="order_by" value="popularity">
+                    <input type="text" class="hidden" id="order" name="order" value="DESC">
                     <div class="products-filter__filters">
                         <div class="products-filter__ranges">
                             <div class="range-input" id="price-range">
                                 <div class="range-input__name">Цена от</div>
-                                <input data-from-input type="number" class="range-input__input" value="0" min="0" max="4500">
+                                <input data-from-input type="number" class="range-input__input" value="0" min="0" >
                                 <div class="range-input__delimeter"></div>
                                 <div class="range-input__to">до</div>
-                                <input data-to-input type="number" class="range-input__input" value="4500" min="0" max="4500">
+                                <input data-to-input type="number" class="range-input__input" value="4500" min="0">
                                 <div class="range-input__unit">₽</div>
-                                <div data-js-range class="range-input__range range-slider" data-from="0" data-to="4500"></div>
+                                <div data-js-range class="range-input__range range-slider" data-current-min="2090" data-current-max="6000" data-from="0" data-to="10000"></div>
                             </div>
                             <div class="range-input">
                                 <div class="range-input__name">Ширина от</div>
@@ -63,14 +65,67 @@
                             </div>
                         </div>
                         <div class="products-filter__submit-row">
-                            <div></div>
+                            <div class="products-filter__radios">
+                                <label class="custom-radio">
+                                    <input type="checkbox" class="custom-radio__input">
+                                    <span class="custom-radio__radio"></span>
+                                    <span class="custom-radio__label">В наличии</span>
+                                </label>
+                                <label class="custom-radio">
+                                    <input type="checkbox" class="custom-radio__input">
+                                    <span class="custom-radio__radio"></span>
+                                    <span class="custom-radio__label">Новый товар</span>
+                                </label>
+                            </div>
                             <div>
                                 <a href="" class="products-filter__reset btn btn--inline btn--transparent-dark btn--pad29">Сбросить</a>
                                 <button class="products-filter__submit btn btn--inline btn--main-dark btn--pad29">Применить фильтр</button>
                             </div>
                         </div>
                     </div>
+                </form>
+            </div>
+            <div class="catalog-sort" data-sort-container>
+                <p class="catalog-sort__title">Сортировка:</p>
+                <div class="sort-option asc" data-sort-option data-current-order="DESC" data-order-by="price">
+                    <div class="sort-option__graph">
+                        <div class="sort-option__graph-col"></div>
+                        <div class="sort-option__graph-col"></div>
+                        <div class="sort-option__graph-col"></div>
+                        <div class="sort-option__graph-col"></div>
+                    </div>
+                    По цене
                 </div>
+                <div class="sort-option active" data-sort-option data-order-by="popularity" data-default-order="DSC">По полулярности</div>
+            </div>
+            <div class="products-page-grid products-grid">
+                @include ./parts/product-card.html {"img" : "./static/images/product1.jpg", "name" : "Панно «Кони в горах»", "size" : "1,5 х 600 х 400 мм", "price" : "10 000"}
+                @include ./parts/product-card.html {"img" : "./static/images/product2.jpg", "name" : "Цветочница", "size" : "1,5 х 600 х 400 мм", "price" : "10 000"}
+                @include ./parts/product-card.html {"img" : "./static/images/product3.jpg", "name" : "Декоративные элементы для лестниц, заборов, перегородок и др.", "size" : "1,5 х 600 х 400 мм", "price" : "10 000"}
+                @include ./parts/product-card.html {"img" : "./static/images/product4.jpg", "name" : "Очаг для костра «Лес»", "size" : "1,5 х 600 х 400 мм", "price" : "10 000"}
+                @include ./parts/product-card.html {"img" : "./static/images/product1.jpg", "name" : "Панно «Кони в горах»", "size" : "1,5 х 600 х 400 мм", "price" : "10 000"}
+                @include ./parts/product-card.html {"img" : "./static/images/product2.jpg", "name" : "Цветочница", "size" : "1,5 х 600 х 400 мм", "price" : "10 000"}
+                @include ./parts/product-card.html {"img" : "./static/images/product3.jpg", "name" : "Декоративные элементы для лестниц, заборов, перегородок и др.", "size" : "1,5 х 600 х 400 мм", "price" : "10 000"}
+                @include ./parts/product-card.html {"img" : "./static/images/product4.jpg", "name" : "Очаг для костра «Лес»", "size" : "1,5 х 600 х 400 мм", "price" : "10 000"}
+            </div>
+            <div class="pagination">
+                <a href="/" class="pagination__page arrow prev">
+                    <svg viewBox="0 0 9 5">
+                        <use href='./static/images/sprite.svg#arr'/>
+                    </svg>
+                </a>
+                <span class="pagination__page current">1</span>
+                <a href="/" class="pagination__page">2</a>
+                <a href="/" class="pagination__page">3</a>
+                <a href="/" class="pagination__page">...</a>
+                <a href="/" class="pagination__page">8</a>
+                <a href="/" class="pagination__page">9</a>
+                <a href="/" class="pagination__page">10</a>
+                <a href="/" class="pagination__page arrow next">
+                    <svg viewBox="0 0 9 5">
+                        <use href='./static/images/sprite.svg#arr'/>
+                    </svg>
+                </a>
             </div>
         </div>
     </div>
