--- a/catalog.html
+++ b/catalog.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./static/css/main.css">
     <script>
         window.templateUrl = '.'
+        window.ajaxURL = '/'
     </script>
     <script defer src="./static/js/main.bundle.js"></script>
 </head>
@@ -34,15 +35,15 @@
         </a>
         <ul class="sub-menu">
             <div class="menu-item">
-                <a href="/" class="menu-link">Лазерная резка ЧПУ</a>
+                <a href="./text-page.html" class="menu-link">Лазерная резка ЧПУ</a>
             </div>
             <div class="menu-item">
-                <a href="/" class="menu-link">Сварочные работы</a>
+                <a href="./text-page.html" class="menu-link">Сварочные работы</a>
             </div>
         </ul>
     </li>
     <li class="menu-item has-children">
-        <a href="/" class="menu-link">
+        <a href="./text-page.html" class="menu-link">
             О компании
             <svg viewBox="0 0 9 5">
                 <use href='./static/images/sprite.svg#arr'/>
@@ -74,10 +75,17 @@
                     <div class="default-burger__line burger__line burger__line--cross"></div>
                     <div class="default-burger__line burger__line"></div>
                 </div>
-                <div class="header__action">
+                <label for="header-search" class="header__search header__action">
                     <svg class="header__action-icon" viewBox="0 0 22 22">
                         <use href='./static/images/sprite.svg#search'/>
                     </svg>
+                </label>
+                <div class="header__search-container">
+                    <div class="header__search-dropdown">
+                        <div class="form-elem">
+                            <input id="header-search" name="search" type="text" class="form-text-input" placeholder="Поиск">
+                        </div>
+                    </div>
                 </div>
                 <a href="/" class="header__cart header__action">
                     <svg class="header__action-icon" viewBox="0 0 22 22">
@@ -250,15 +258,15 @@
         </a>
         <ul class="sub-menu">
             <div class="menu-item">
-                <a href="/" class="menu-link">Лазерная резка ЧПУ</a>
+                <a href="./text-page.html" class="menu-link">Лазерная резка ЧПУ</a>
             </div>
             <div class="menu-item">
-                <a href="/" class="menu-link">Сварочные работы</a>
+                <a href="./text-page.html" class="menu-link">Сварочные работы</a>
             </div>
         </ul>
     </li>
     <li class="menu-item has-children">
-        <a href="/" class="menu-link">
+        <a href="./text-page.html" class="menu-link">
             О компании
             <svg viewBox="0 0 9 5">
                 <use href='./static/images/sprite.svg#arr'/>
