--- a/src/html/parts/header-menu.html
+++ b/src/html/parts/header-menu.html
@@ -11,15 +11,15 @@
         </a>
         <ul class="sub-menu">
             <div class="menu-item">
-                <a href="/" class="menu-link">Лазерная резка ЧПУ</a>
+                <a href="./text-page.html" class="menu-link">Лазерная резка ЧПУ</a>
             </div>
             <div class="menu-item">
-                <a href="/" class="menu-link">Сварочные работы</a>
+                <a href="./text-page.html" class="menu-link">Сварочные работы</a>
             </div>
         </ul>
     </li>
     <li class="menu-item has-children">
-        <a href="/" class="menu-link">
+        <a href="./text-page.html" class="menu-link">
             О компании
             <svg viewBox="0 0 9 5">
                 <use href='./static/images/sprite.svg#arr'/>
